RESOLVED FIXED18583
font shorthand and negative line-heights fail in Safari.
https://bugs.webkit.org/show_bug.cgi?id=18583
Summary font shorthand and negative line-heights fail in Safari.
Anantha Keesara
Reported 2008-04-18 09:33:04 PDT
Steps: Go to http://www.hixie.ch/tests/adhoc/css/fonts/008.html Issue: font shorthand and negative line-heights fail in Safari. Other browsers: IE7 : ok FF3 beta : ok Safari 3.1 : not ok Opera 9.24 Build 8816 : not Nightly tested: r31446
Attachments
patch (42.31 KB, patch)
2008-04-24 22:12 PDT, Anatoli Papirovski
hyatt: review+
Anatoli Papirovski
Comment 1 2008-04-24 22:12:46 PDT
Created attachment 20810 [details] patch Fixed this, as well as the same issue for font-size. I added the FNonNeg parameter to font-size, line-height, and font shorthand for both font-size and line-height. I've provided a test-case for both font-size and line-height.
Dave Hyatt
Comment 2 2008-04-24 22:20:24 PDT
Comment on attachment 20810 [details] patch r=me
mitz
Comment 3 2008-04-26 10:11:25 PDT
Note You need to log in before you can comment on or make changes to this bug.