WebCore:

2008-04-26  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=18583
        WebKit should ignore declarations with a negative value for
        line-height and font-size, including in the shorthand font form.

        Tests: fast/css/font-size-negative.html
               fast/css/line-height-negative.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseFont):

LayoutTests:

2008-04-26  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        Test for https://bugs.webkit.org/show_bug.cgi?id=18583
        Negative values are invalid for font-size and line-height,
        including in the shorthand "font".

        * fast/css/font-size-negative.html: Added.
        * fast/css/line-height-negative.html: Added.
        * platform/mac/css2.1/t100801-c548-ln-ht-02-b-ag-expected.checksum:
        * platform/mac/css2.1/t100801-c548-ln-ht-02-b-ag-expected.png:
        * platform/mac/css2.1/t100801-c548-ln-ht-02-b-ag-expected.txt:
        * platform/mac/fast/css/font-size-negative-expected.checksum: Added.
        * platform/mac/fast/css/font-size-negative-expected.png: Added.
        * platform/mac/fast/css/font-size-negative-expected.txt: Added.
        * platform/mac/fast/css/line-height-negative-expected.checksum: Added.
        * platform/mac/fast/css/line-height-negative-expected.png: Added.
        * platform/mac/fast/css/line-height-negative-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@32591 bbb929c8-8fbe-4397-9dbb-9b2b20218538